# wifi-monk

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  wifi-monk.py
src/wifimonk/: wifi-monk.py
