[project]
name = "wifimonk"
version = "0.0.1"
authors = [
  {name = "Sett Sarverott", email = "sett@sarverott.com"},

]
description = "very usefull to symplify configuration of advanced wifi structures"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Natural Language :: Polish",
  "Development Status :: 1 - Planning",
  "Environment :: Plugins",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Religion",
  "Programming Language :: Python :: Implementation",
  "Programming Language :: Python",
  "Topic :: Adaptive Technologies",
  "Topic :: Artistic Software",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Education",
  "Topic :: Religion",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Sociology",
  "Topic :: Sociology :: History",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: System :: Clustering",
  "Topic :: System :: Emulators",
  "Topic :: System :: Filesystems",
  "Topic :: System :: Networking",
  "Topic :: System :: Operating System",
  "Topic :: System :: Software Distribution",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 75.6.0",
]

[project.urls]
Homepage = "https://github.com/sarverott/wifimonk"
Issues = "https://github.com/sarverott/wifimonk/issues"


[tool.setuptools.packages.find]
exclude = ['examples*', 'dev*', 'build*', 'tests*', '.github*']
include = ['src*']